--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.10.8",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.12.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +24,7 @@
     "react-native-web": "^0.19.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.7.2",
     "stream-browserify": "^3.0.0",
     "timers-browserify": "^2.0.12",
     "web-vitals": "^2.1.4"
